<resources>
    <string name="app_name">Tutor Finder</string>
    <string name="student_requests">Student Requests</string>
    <string name="my_students_headline">MY STUDENTS</string>
    <string name="edit_tutor_profile">Edit Profile</string>
    <string name="delete_my_student">Delete Student</string>
    <string name="accountTypeinfo">How do you want to continue....</string>
    <string name="studentBtn">Student</string>
    <string name="tutorSelectBtn">Tutor</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="alreadyAccount">Login to already registered account</string>
    <string name="signupmsg">Don\'t have an account?</string>
    <string name="hint">enter the name to search</string>
    <string name="editProfile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="contact_student">Contact Student</string>
    <string name="log_out">Log Out</string>

    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="avatar">Avatar</string>
    <string name="emailStudent">Email</string>
    <string name="grade">Grade</string>
    <string name="course">Course</string>
    <string name="phone">Phone</string>
    <string name="degree">Academic Degree</string>
    <string name="teachingCourse">Courses taught</string>
    <string name="experience">Experience(Years)</string>
    <string name="back">Back</string>
    <string name="sendrequest">Send Request</string>
    <string name="cancelRequest">Cancel Request</string>
    <string name="msgSendReq">Your request has been sent</string>
    <string name="msgCancelReq">Your request has been canceled</string>
    <string name="filter">Click to filter tutors</string>
    <string name="location">Location</string>
    <string name="done">Done</string>
    <string-array name="genderQuery">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="no_account">Do not have an account</string>
    <string name="here">Register here</string>
    <string name="welcome_user">Welcome new user</string>
    <string name="problem">Problem creating account</string>
    <string name="tutor_logout">Log out</string>
    <string name="logged_out">You are now logged out</string>
    <string name="welcome">"Welcome !"</string>
    <string name="signupbtn">Sign Up</string>

    <string name="channel_name">PRadip</string>
    <string name="channnel_desc">Testing for notification</string>


    <string name="sentRequest">Sent Request</string>
    <string name="notification">Subscribe Notification</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string-array name="academicDegreeSpinner">
        <item>--No Selection--</item>

        <item>Masters</item>
        <item>Bachelors</item>
        <item>Phd</item>
        <item>Diploma</item>
        <item>Post Graduate</item>

    </string-array>
    <string-array name="ExpereienceSpinner">
        <item>--No Selection--</item>
        // This is a suggestion
        <item>Less than 1</item>
        <item>1 to 5</item>
        <item>5 to 10</item>
        <item>More than 10</item>

        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>

    </string-array>

    <string-array name="gradeSpinner">
        <item>--No Selection--</item>

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>

    </string-array>
</resources>