<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student.StudentDashboard">

    <Button
        android:id="@+id/editTutorProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="5dp"
        android:onClick="onEditProfileBtnClicked"
        android:text="@string/editProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/filterTutorActivityBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onFilterBtnPressed"
        android:text="@string/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMyTutor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/editTutorProfile"
        app:layout_constraintTop_toBottomOf="@+id/filterTutorActivityBtn">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/sentRequestTutorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sentRequestTutor"
        android:text="@string/sentRequest"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>