<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"

    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewMyTutorItem"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:foregroundGravity="center"

            android:scaleType="fitXY"
            app:srcCompat="@drawable/choose_choice"
            tools:srcCompat="@drawable/choose_choice" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMyTutorItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Name" />

            <TextView
                android:id="@+id/textViewMyTutorItemAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address" />

            <TextView
                android:id="@+id/textViewMyTutorItemGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender" />

            <TextView
                android:id="@+id/textViewMyTutorItemExperience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/experience" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>